# swift-python-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  tasks.py  test_template_creation.sh  todo.md
.github/: test_template_creation.sh
.github/workflows/: create_new_project.yml  test_creating_template_instance.yml  tests.yml
docs/: conf.py  guide.md  index.md
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup_for_dev.sh  tasks.py  {% if cookiecutter.add_makefile == 'y' } Makefile {%- endif %}  {% if cookiecutter.setup_for_dev_bash_script == 'y' -%} setup_for_dev.sh {%- endif %}
{{cookiecutter.project_name}}/.github/: dependabot.yml  first_setup.sh  recommended_repo_setup.md  repo_setup.md
{{cookiecutter.project_name}}/.github/workflows/: check_for_rej.yml  cruft.yml  dependabot_automerge.yml  documentation.yml  lint.yml  mypy.yml  pre-commit.yml  release.yml  stalebot.yml  static_type_checks.yml  tests.yml
{{cookiecutter.project_name}}/docs/: conf.py  faq.md  index.md  installation.md
{{cookiecutter.project_name}}/docs/api/: docs_example.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: docs_example.py
{{cookiecutter.project_name}}/tests/: first_test.py  test_main.py
